Configured the application to run with docker and also created docker compose for creating two services of web and database