@@ -14,6 +14,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 @Configuration
 public class AppConfig {
@@ -30,14 +31,14 @@ public class AppConfig {
                     public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
 
                         CorsConfiguration cfg = new CorsConfiguration();
-                        cfg.setAllowedOrigins(Arrays.asList(
+                        cfg.setAllowedOrigins(List.of(
                                 "http://localhost:5173"
                         ));
 
                         cfg.setAllowedMethods(Collections.singletonList("*"));
                         cfg.setAllowCredentials(true);
                         cfg.setAllowedHeaders(Collections.singletonList("*"));
-                        cfg.setExposedHeaders(Arrays.asList("Authorization"));
+                        cfg.setExposedHeaders(List.of("Authorization"));
                         cfg.setMaxAge(3600L);
 
                         return cfg;
